2012-11-24  Raymond Penners  <raymond.penners@intenct.nl>

	* account: Added adapter class for increased pluggability. Added
	hook for 3rd party invitation system to by pass e-mail
	verification (`stash_email_verified`). Moved sending of mail to
	adapter.

2012-10-23  Raymond Penners  <raymond.penners@intenct.nl>

	* account: Added option to completely disable e-mail verification
	during signup.

2012-10-10  Raymond Penners  <raymond.penners@intenct.nl>

	* Version 0.8.2 released.

	* Twitter: Login was broken due to change at in URLs at Twitter,
	fixed.

	* LinkedIn: Added support for passing along the OAuth scope.

	* account: Improved e-mail confirmation error handling, no more
	confusing 404s.

2012-10-03  Raymond Penners  <raymond.penners@intenct.nl>

	* account: Aldiantoro Nugroho contributed support for a new
	setting: ACCOUNT_USERNAME_MIN_LENGTH

2012-09-29  Raymond Penners  <raymond.penners@intenct.nl>

	* socialaccount: Added preliminary support for Mozilla Persona.

2012-09-28  Raymond Penners  <raymond.penners@intenct.nl>

	* account: Sam Solomon added various signals for email and
	password related changes.

2012-09-08  Raymond Penners  <raymond.penners@intenct.nl>

	* account: Usernames may now contain @, +, . and - characters.

2012-09-03  Raymond Penners  <raymond.penners@intenct.nl>

	* Version 0.8.1 released.

	* Python 2.6.2 compatibility issue, fixed.

	* The example project was unintentionally packaged, fixed.

2012-09-01  Raymond Penners  <raymond.penners@intenct.nl>

	* Version 0.8.0 released.

2012-08-29  Raymond Penners  <raymond.penners@intenct.nl>

	* account: Dropped dependency on the emailconfirmation app,
	integrating its functionality into the account app. This change is
	of major impact, please refer to the documentation on how to
	upgrade.

2012-08-28  Raymond Penners  <raymond.penners@intenct.nl>

	* account: Documented ACCOUNT_USERNAME_REQUIRED. This is actually
	not a new setting, but it somehow got overlooked in the